@@ -1,3 +1,9 @@
+2006-11-17  Thomas Keller  <me@thomaskeller.biz>
+
+	* cmd_automate.cc, cmd.hh, ...: renamed member variable 
+	"options" to "opts" to make (hopefully) the gcc-3.3 build
+	slaves happy
+
 2006-11-15  Richard Levitte  <richard@levitte.org>
 
 	* lua.cc (LUAEXT): Implement includedirpattern(), which is like
